Fix transparent navigation on mobile

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -98,9 +98,13 @@ aside
       list-style-type: none
       float: left
       height: 70%
+      overflow-x: hidden
+      overflow-y: auto
   #content
     width: 100%
   #main
+    float: left
+    width: 100%
     h1
       margin-bottom: 0
       hyphens: auto
@@ -108,6 +112,8 @@ aside
       float: left
       width: 100%
   #paging
+    float: left
+    width: 100%
     a
       text-align: center
       display: block
